<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BCC1EF"
    tools:context=".Profile">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_title"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp" />

    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="126dp"
        android:layout_height="133dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/profile" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_name"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@id/profileImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/emailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_label"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="40dp"
        app:layout_constraintTop_toBottomOf="@id/userName"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/emailValue"
        android:layout_width="200dp"
        android:layout_height="36dp"
        android:background="@color/white"
        android:paddingLeft="5dp"
        android:text="@string/profile_email"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/emailLabel"
        app:layout_constraintTop_toTopOf="@id/emailLabel"
        android:layout_marginStart="20dp" />

    <TextView
        android:id="@+id/phoneLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_label"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="@id/emailLabel"
        app:layout_constraintTop_toBottomOf="@id/emailLabel"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/phoneValue"
        android:layout_width="200dp"
        android:layout_height="36dp"
        android:background="@color/white"
        android:paddingLeft="5dp"
        android:text="@string/phone_number"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/emailValue"
        app:layout_constraintTop_toTopOf="@id/phoneLabel" />

    <Button
        android:id="@+id/editButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_button"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:backgroundTint="#011AA6"
        app:cornerRadius="5dp"
        app:layout_constraintTop_toBottomOf="@id/phoneValue"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp" />

    <Button
        android:id="@+id/historyButton"
        android:layout_width="143dp"
        android:layout_height="139dp"
        android:text="@string/fragranceHistory_button"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:backgroundTint="#3A206A"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="40dp" />

    <Button
        android:id="@+id/reviewsButton"
        android:layout_width="143dp"
        android:layout_height="139dp"
        android:text="@string/communityReview_button"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:backgroundTint="#332828"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="40dp" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navigation_menu"
        app:itemIconTint="#2C0E1F"
        app:itemIconSize="30dp"
        android:background="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>
