<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D3ADAD"
    tools:context=".CommunityReviews">


    <TextView
        android:id="@+id/Community"
        android:layout_width="392dp"
        android:layout_height="108dp"
        android:background="#12080F"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/communityReview_title"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/writeReviewButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="#2B0C0D"
        android:text="@string/writeReview_button"
        android:textColor="@color/white"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Community" />


    <TextView
        android:id="@+id/reviewsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/Review_subtitle"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/writeReviewButton" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView1"
        android:layout_width="190dp"
        android:layout_height="131dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="#F0D0F0"
        app:cardCornerRadius="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reviewsLabel">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/reviewerImage1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/profile" />

            <TextView
                android:id="@+id/reviewerName1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Review_customer1"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/reviewText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Review_cus1_details"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <RatingBar
                android:id="@+id/ratingBar1"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:rating="4.5"
                android:stepSize="0.5" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="191dp"
        android:layout_height="121dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="#F0D0F0"
        app:cardCornerRadius="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/reviewerImage2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/profile" />

            <TextView
                android:id="@+id/reviewerName2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Review_customer2"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/reviewText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Review_cus2_details"
                android:textColor="@color/black" />

            <RatingBar
                android:id="@+id/ratingBar2"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:rating="4.5"
                android:stepSize="0.5" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="189dp"
        android:layout_height="119dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="#F0D0F0"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/reviewerImage3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/profile" />

            <TextView
                android:id="@+id/reviewerName3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Review_customer3"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/reviewText3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Review_cus3_details"
                android:textColor="@color/black" />

            <RatingBar
                android:id="@+id/ratingBar3"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:rating="4.5"
                android:stepSize="0.5" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <ImageView
        android:id="@+id/productImage1"
        android:layout_width="121dp"
        android:layout_height="125dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView1"
        app:srcCompat="@drawable/perfume1"
        />

    <ImageView
        android:id="@+id/productImage2"
        android:layout_width="121dp"
        android:layout_height="125dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView2"
        app:srcCompat="@drawable/sakura"/>

    <ImageView
        android:id="@+id/productImage3"
        android:layout_width="121dp"
        android:layout_height="125dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView3"
        app:srcCompat="@drawable/perfume2"/>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:itemIconSize="30dp"
        app:itemIconTint="#2C0E1F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navigation_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>
